@@ -1,3 +1,8 @@
+Tue Dec 14 14:03:57 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>
+
+	* ext/openssl/ossl.c (ossl_raise): avoid buffer overrun.
+          [ruby-dev:25187]
+
 Tue Dec 14 08:47:45 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* eval.c (Init_eval): should mark ruby_eval_tree.  [ruby-dev:25189]
